# Ybe-check

./: .gitignore  .mcp.json  .research-idea.md  AI_USAGE.md  MCP_ACCESS_GUIDE.md  README.md  SECURITY_FIX_secrets_0.md  TODO.md  _test_mcp.py  preview.html  pyproject.toml  requirements.txt  server.json
.cursor/: mcp.json
.github/workflows/: static-smoke.yml
.mcp/: server.json
A2K2/: .eslintrc.json  .gitignore  .vscodeignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  cli.py  mcp_server.py  package-lock.json  package.json  requirements.txt  tsconfig.json  ybe-check-0.1.2.vsix  ybe-check-0.17.0.vsix  ybe-check-0.18.0.vsix  ybe-check-0.2.0.vsix  ybe-check-0.21.0.vsix  ybe-check-0.22.0.vsix  ybe-check-0.9.0.vsix  ybe-check-1.0.0.vsix
A2K2-test/: Dockerfile  app.py  docker-compose.yml  k8s-deployment.yaml  package.json  prompts.yaml  requirements.txt  settings.py
A2K2-test/terraform/: main.tf
A2K2-test/tests/: test_sample.py
A2K2/__mocks__/: vscode.ts
A2K2/modules/: __init__.py  _utils.py  ai_traceability.py  api_fuzzing.py  auth_guards.py  code_quality.py  config_env.py  container_scan.py  dependencies.py  iac_security.py  license_compliance.py  load_testing.py  pii_logging.py  prompt_injection.py  prompt_live.py  sbom.py  secrets.py  test_coverage.py  web_attacks.py
A2K2/src/: extension.ts
A2K2/src/assets/style/: styles.css
A2K2/src/constants/: default.ts
A2K2/src/sidebar/: SidebarProvider.ts  promptBuilder.ts  sidebarTemplate.ts  store.ts
A2K2/src/utils/: fileUtils.ts  loggingUtils.ts  scanUtils.ts  statusBarUtils.ts  webviewUtils.ts
A2K2/tests/: extension.test.ts
marketplace/: DISTRIBUTION_GUIDE.md  PYPI_PUBLISH_GUIDE.md  RELEASE_SUMMARY.md
src/ybe_check/: __init__.py  ai.py  cli.py  core.py  dashboard.py  mcp_server.py  schema.py
src/ybe_check/assets/: ybe-check-0.19.0.vsix  ybe-check-0.20.0.vsix
terraform/: main.tf
web/: main dashboard code.html  package-lock.json  package.json  remediation code.html
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/scan/: route.ts
web/app/components/: GlitchText.css  GlitchText.tsx  LetterGlitch.tsx
