[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ybe-check"
version = "0.2.1"
description = "Production-readiness gatekeeper for vibe-coded apps. Scans repos for secrets, prompt injection, PII, dependencies, auth, IaC, SBOM, and more."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Ybe Check", url = "https://github.com/AddyCuber/A2K2-PS1" }]
keywords = ["security", "scan", "vibe-coded", "production-readiness"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.9.0",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "google-generativeai>=0.5.0",
]
[project.urls]
Homepage = "https://github.com/AddyCuber/A2K2-PS1"
Repository = "https://github.com/AddyCuber/A2K2-PS1"
Documentation = "https://github.com/AddyCuber/A2K2-PS1#readme"

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
ybe-check = "ybe_check.cli:app"

[tool.hatch.build]
artifacts = ["src/ybe_check/assets/*.vsix"]

[tool.hatch.build.targets.wheel]
packages = ["src/ybe_check", "A2K2"]

[tool.hatch.build.targets.sdist]
include = ["src/ybe_check", "A2K2", "src/ybe_check/assets/*.vsix"]
